--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
     "lint": "eslint *.js src/**/*.js",
-    "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\""
+    "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,8 @@
     "@eslint/js": "^9.5.0",
     "eslint": "^9.5.0",
     "eslint-plugin-react": "^7.34.3",
-    "globals": "^15.6.0"
+    "globals": "^15.6.0",
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "vite": "^5.3.3"
